--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "bright": "^1.0.0",
-    "next": "^15.0.5",
+    "next": "15.0.7",
     "react": "^19.0.1",
     "react-dom": "^19.0.1"
   }
